--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,5 @@
 spring:
   application:
     name: ead-notification-service
-  config:
-    import: 'configserver:'
-  cloud:
-    config:
-      discovery:
-        serviceId: ead-config-server
-      username: admin
-      password: 'admin'
+  profiles:
+    active: dev
